--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,3 +1,3 @@
 config:
-  info: "master branch,springcloud-config/config-dev.yml version=101"
-  name: "lisi"
+  info: "master branch,springcloud-config/config-dev.yml version=106"
+  name: "wangwu"
